css/style.css
* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

body {
	display: flex;
	width: 100dvw;
	height: 100dvh;
	overflow: hidden;

	font-family: Arial;
}

#navbar {
	display: flex;
	flex-direction: column;
	width: 10rem;
	height: 100%;
	flex-shrink: 0;
	padding: 10px;
	overflow: hidden scroll;
}

input[type="button"] {
	cursor: pointer;
}

#canvasContainer {
	position: relative;
	flex-grow: 1;
	height: 100%;
}

canvas {
	position: absolute;
	width: 100%;
	height: 100%;
}

.stats {
	color: #fff5;
}

